More on intermediate. Nearly complete.

--- a/tutorial/bg_info/tutorial_julesrose/jr_advanced.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_advanced.html
@@ -40,7 +40,9 @@
                                 <li><a href="#abc">abc</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Advanced Practical's</li>
-                                <li><a href="#abcd">abcd</a></li>
+                                <li><a href="#arst">Adding rose stem tests</a></li>
+                                <li><a href="#umjt">UM-JULES tickets</a></li>
+                                <li><a href="#rfcmc">Resolving FCM conflicts</a></li>
                             </ul>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other material <span class="caret"></span></a>
@@ -70,29 +72,101 @@
         </nav>
         <div class="container theme-showcase" role="main">
         <div class="jumbotron">
-            <h1>Advanced </h1>
+            <h1>Advanced JULES-Rose tutorial (in development)</h1>
             <p>This aims to explain the importance of:
             <ul>
                 <li><a href="#abc">abc</a></li>
+                <li><a href="#arst">Adding rose stem tests</a></li>
+                <li><a href="#umjt">UM-JULES tickets</a></li>
+                <li><a href="#rfcmc">Resolving FCM conflicts</a></li>
+
             </ul>
             </p>
         </div>
+
+        <div class="well">
+            <p>It is expected that you have:
+            <ul>
+            <li>Completed the <a href="http://metomi.github.io/rose/doc/rose.html">Rose User Guide</a>.</li>
+            <li>Completed the <a href="jr_intermediate.html">Intermediate Tutorial</a>.</li>
+            </ul>
+            </p>
+            <p>
+            OR have:
+            <ul>
+            <li>Experience running rose stem and JULES-Rose suites.</li>
+            <li>Made complex changes to JULES-Rose suites.</li>
+            <li>Made complex changes to JULES code including testing with rose stem.</li>
+            <li>Experience with FCM commands.</li>
+            </ul>
+            </p>
+        </div>
+
         <div class="well">
             First let's do the Advanced Quiz to see how much you already know and what we
-            will need to focus on in this section, note there are no right or wrong answers
-            for the first five questions.
+            will need to focus on in this section.
         </div>
         <div class="container">
-            <p><a class="btn btn-lg btn-success" href="intermediate_quiz.html" role="button">Advanced Quiz</a></p>
+            <p><a class="btn btn-lg btn-success" href="advanced_quiz.html" role="button">Advanced Quiz</a></p>
         </div>
         <br/>
 
 
+        <h2><a id="abc">abc</a></h2>
+        <p>
+        <ul>
+            <div class="page-header">
+                <h3>HERE?????</h3>
+            </div>
+            <div class="well">
+               <p> </p>
 
 
+            </div>
+        </ul>
+        </p>
+
+        <h2><a id="arst">Adding rose stem tests</a></h2>
+        <p>
+        <ul>
+            <div class="page-header">
+                <h3>HERE?????</h3>
+            </div>
+            <div class="well">
+               <p> </p>
 
 
+            </div>
+        </ul>
+        </p>
 
+        <h2><a id="umjt">UM-JULES tickets</a></h2>
+        <p>
+        <ul>
+            <div class="page-header">
+                <h3>HERE?????</h3>
+            </div>
+            <div class="well">
+               <p> </p>
+
+
+            </div>
+        </ul>
+        </p>
+
+        <h2><a id="rfcmc">Resolving FCM conflicts</a></h2>
+        <p>
+        <ul>
+            <div class="page-header">
+                <h3>HERE?????</h3>
+            </div>
+            <div class="well">
+               <p> </p>
+
+
+            </div>
+        </ul>
+        </p>
 
 
             <br/>
@@ -103,7 +177,7 @@
         <br/>
         <div class="container">
         <div class="well">
-        Now you have completed the tutorial, for any further questions please email jules-support@metoffice.gov.uk
+        Now you have completed the tutorial, for any further questions please email <a href="mailto:Jules-Support@metoffice.gov.uk?Subject=JULES%20Tutorial%20Support">JULES Support</a>
         </div>
         </div>
         <br/>
