--- a/tutorial/bg_info/tutorial_julesrose/jr_beginner.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_beginner.html
@@ -99,6 +99,8 @@
                 <li>Have requested for access to JULES from the <a href="https://jules.jchmr.org/">jchmr website</a>.</li>
                 <li>Have therefore got a Met Office Science Repository Service account and can access <a href="https://code.metoffice.gov.uk/trac/jules">JULES MOSRS webpages</a>.</li>
                <li>Have Rose, Cylc, FCM, keywords set up on the machine you are working on or are using the VM. <a href="https://github.com/metomi/metomi-vms">GitHub VM webpages</a> and the <a href="https://code.metoffice.gov.uk/trac/jules/wiki/JULESVirtualMachine">guidance</a> from the JULES MOSRS web pages.</li>
+            <li>Completed the <a href="http://metomi.github.io/rose/doc/rose.html">Rose User Guide</a>.</li>
+
             </ul>
         </div>
       <div class="well">
