Update to remind need nccmp for rose stem

--- a/tutorial/bg_info/tutorial_julesrose/jr_rosecylc_setup.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_rosecylc_setup.html
@@ -297,6 +297,17 @@ store-plaintext-passwords = no
             <div class="well">
                 <br/>
                 <br/>
+                <p>You need <code>nccmp</code> installed, open source software
+                   for comparing NetCDF data, at your site to run JULES rose 
+                   stem tests.
+                <a href="http://nccmp.sourceforge.net/"></a>
+                </p>
+                </br> 
+            </div>
+                <h2>Creating site KGO</h2>
+            <div class="well">
+                <br/>
+                <br/>
                 <ol>
                     <li>
                      KGO_DIR=&lt;path/to/jules/rose-stem-kgo/&gt;</li>
