--- a/tutorial/bg_info/tutorial_julesrose/jr_rosecylc_setup.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_rosecylc_setup.html
@@ -293,21 +293,23 @@ store-plaintext-passwords = no
                 <br/>
                 <br/>
 </div>
-                <h2>Creating site KGO</h2>
+                <h2>Running JULES rose stem</h2>
             <div class="well">
                 <br/>
                 <br/>
-                <p>You need <code>nccmp</code> installed, open source software
-                   for comparing NetCDF data, at your site to run JULES rose 
-                   stem tests.
+                <p>To run JULES rose stem you need <code>nccmp</code> installed.
+                   It is open source software for comparing NetCDF data.
                 <a href="http://nccmp.sourceforge.net/"></a>
                 </p>
                 </br> 
             </div>
-                <h2>Creating site KGO</h2>
+                <h2>Creating site KGO for JULES rose stem</h2>
             <div class="well">
                 <br/>
                 <br/>
+                <p>Known Good Output (KGO) is the good data that <code>nccmp</code> uses 
+                   to compare with the new output that the rose stem suite has created in the
+                   current suite run.</p>
                 <ol>
                     <li>
                      KGO_DIR=&lt;path/to/jules/rose-stem-kgo/&gt;</li>
